--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,24 +9,19 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
-    - name: Build Docker image
-      run: docker build -t authface:latest .
-    
-    - name: Run validation checks
-      run: ./run_checks.sh
-    
-    - name: Test health endpoints
-      run: |
-        docker run -d --name authface-test -p 8080:8080 authface:latest
-        sleep 10
-        curl -f http://localhost:8080/health
-        curl -f http://localhost:8080/status
-        docker stop authface-test
-        docker rm authface-test
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: pytest
