--- a/.github/workflows/data-release.yml
+++ b/.github/workflows/data-release.yml
@@ -13,20 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
         with:
-          python-version: '3.10'
+          python-version: "3.12"
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: uv sync
       - name: Run data aggregation pipeline
-        run: |
-          python scripts/run_pipeline.py --log-level INFO
+        run: uv run python scripts/run_pipeline.py --log-level INFO
       - name: Run tests
-        run: |
-          pytest
+        run: uv run pytest
       - name: Commit release artifacts
         run: |
           git config user.name "github-actions[bot]"
