Update CI workflow to use uv and add timeout to data release workflow

--- a/.github/workflows/data-release.yml
+++ b/.github/workflows/data-release.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Install dependencies
         run: uv sync
       - name: Run data aggregation pipeline
-        run: uv run python scripts/run_pipeline.py --log-level INFO
+        run: uv run python scripts/run_pipeline.py --log-level INFO --model "sshleifer/distilbart-cnn-12-6"
+        timeout-minutes: 10
       - name: Run tests
         run: uv run pytest
       - name: Commit release artifacts
