--- a/.github/workflows/data-release.yml
+++ b/.github/workflows/data-release.yml
@@ -17,6 +17,13 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           python-version: "3.12"
+      - name: Cache Hugging Face models
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/huggingface
+          key: ${{ runner.os }}-huggingface-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-huggingface-
       - name: Install dependencies
         run: uv sync
       - name: Run data aggregation pipeline
