--- a/.github/workflows/data-release.yml
+++ b/.github/workflows/data-release.yml
@@ -10,22 +10,21 @@ permissions:
 
 jobs:
   build-and-release:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
       - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
           python-version: "3.12"
-      - name: Cache Hugging Face models
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/huggingface
-          key: ${{ runner.os }}-huggingface-${{ hashFiles('**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-huggingface-
       - name: Install dependencies
         run: uv sync
+      - name: Setup model cache (self-hosted only)
+        if: runner.os == 'Linux'
+        run: |
+          mkdir -p ~/.cache/huggingface
+          echo "TRANSFORMERS_CACHE=~/.cache/huggingface" >> $GITHUB_ENV
+          echo "HF_HOME=~/.cache/huggingface" >> $GITHUB_ENV
       - name: Run data aggregation pipeline
         run: uv run python scripts/run_pipeline.py --log-level INFO --model "sshleifer/distilbart-cnn-12-6"
         timeout-minutes: 10
