--- a/containers/githubaction_summarization/Dockerfile
+++ b/containers/githubaction_summarization/Dockerfile
@@ -5,19 +5,8 @@ LABEL maintainer="rl337"
 LABEL description="GitHub Actions self-hosted runner for weirdness data pipeline"
 LABEL container="weirdness-githubaction"
 
-# Install system dependencies
-RUN apk add --no-cache \
-    bash \
-    curl \
-    git \
-    python3 \
-    python3-dev \
-    py3-pip \
-    py3-virtualenv \
-    gcc \
-    g++ \
-    musl-dev \
-    linux-headers
+# Install system dependencies only if not already in base image
+RUN apk add --no-cache python3-dev gcc g++ musl-dev linux-headers
 
 # Install uv for faster Python package management
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
@@ -30,25 +19,25 @@ RUN mkdir -p /app/models /app/api
 # Set environment variables for model caching
 ENV TRANSFORMERS_CACHE=/app/models
 ENV HF_HOME=/app/models
-ENV PYTHONPATH=/app/models/.site-packages:$PYTHONPATH
+ENV PYTHONPATH=/app/models/.site-packages
 
 # Copy project files
-COPY ../../pyproject.toml ../../.python-version ./
-COPY ../../collector ./collector
+COPY pyproject.toml .python-version ./
+COPY collector ./collector
 
 # Setup GitHub Actions Runner
 WORKDIR /runner
 
-# Copy runner setup script
-COPY setup-runner.sh .
+# Copy runner setup script from container directory
+COPY containers/githubaction_summarization/setup-runner.sh .
 RUN chmod +x setup-runner.sh
 
-# Install Python dependencies with uv
-RUN uv pip install --system aiohttp feedparser PyYAML transformers torch numpy flask
+# Install Python dependencies with pip (uv may have issues in Alpine)
+RUN pip3 install --no-cache-dir aiohttp feedparser PyYAML transformers torch numpy flask
 
-# Copy API server and entrypoint
-COPY api-server.py /app/api/
-COPY entrypoint.sh .
+# Copy API server and entrypoint from container directory
+COPY containers/githubaction_summarization/api-server.py /app/api/
+COPY containers/githubaction_summarization/entrypoint.sh .
 RUN chmod +x entrypoint.sh
 
 # Expose health and status endpoints
