Rewrite Dockerfile to use better structure and avoid permission issues

--- a/containers/githubaction_summarization/Dockerfile
+++ b/containers/githubaction_summarization/Dockerfile
@@ -5,43 +5,39 @@ LABEL maintainer="rl337"
 LABEL description="GitHub Actions self-hosted runner for weirdness data pipeline"
 LABEL container="weirdness-githubaction"
 
-# Install system dependencies only if not already in base image
+# Install only additional system dependencies (bash, curl, git, python3, pip3 already in base)
 RUN apk add --no-cache python3-dev gcc g++ musl-dev linux-headers
 
-# Install uv for faster Python package management
+# Install uv
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
 RUN chmod +x /usr/local/bin/uv
 
 # Create directories
-WORKDIR /app
-RUN mkdir -p /app/models /app/api
+RUN mkdir -p /app/models /app/api /runner
 
-# Set environment variables for model caching
-ENV TRANSFORMERS_CACHE=/app/models
-ENV HF_HOME=/app/models
-ENV PYTHONPATH=/app/models/.site-packages
+# Set environment variables
+ENV TRANSFORMERS_CACHE=/app/models \
+    HF_HOME=/app/models \
+    PYTHONPATH=/app/models/.site-packages
 
 # Copy project files
-COPY pyproject.toml .python-version ./
-COPY collector ./collector
+COPY pyproject.toml .python-version /app/
+COPY collector /app/collector
 
-# Setup GitHub Actions Runner
-WORKDIR /runner
+# Copy runner scripts
+COPY containers/githubaction_summarization/setup-runner.sh /runner/
+COPY containers/githubaction_summarization/entrypoint.sh /runner/
+RUN chmod +x /runner/setup-runner.sh /runner/entrypoint.sh
 
-# Copy runner setup script from container directory
-COPY containers/githubaction_summarization/setup-runner.sh .
-RUN chmod +x setup-runner.sh
+# Copy API server
+COPY containers/githubaction_summarization/api-server.py /app/api/
 
-# Install Python dependencies with pip (uv may have issues in Alpine)
+# Install Python dependencies
 RUN pip3 install --no-cache-dir aiohttp feedparser PyYAML transformers torch numpy flask
 
-# Copy API server and entrypoint from container directory
-COPY containers/githubaction_summarization/api-server.py /app/api/
-COPY containers/githubaction_summarization/entrypoint.sh .
-RUN chmod +x entrypoint.sh
-
-# Expose health and status endpoints
+# Expose health endpoints
 EXPOSE 8080
 
+WORKDIR /runner
 ENTRYPOINT ["/runner/entrypoint.sh"]
 
