Add container logs to debug health endpoint issues

--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -67,43 +67,30 @@ jobs:
           # Start container in background on a different port
           CONTAINER_ID=$(docker run -d -p 8082:8080 ${{ env.IMAGE_NAME }}:latest)
           
-          # Wait for container to start
-          sleep 10
+          # Wait for container to start and show logs
+          sleep 15
+          echo "Container logs:"
+          docker logs $CONTAINER_ID
           
           # Check if container is still running
           if ! docker ps | grep -q $CONTAINER_ID; then
             echo "❌ Container failed to start"
-            docker logs $CONTAINER_ID
             exit 1
           fi
           
-          # Test health endpoint with retries
-          for i in {1..5}; do
-            if curl -f http://localhost:8082/health; then
-              echo "✅ Health endpoint working"
-              break
-            else
-              echo "Attempt $i failed, retrying..."
-              sleep 2
-            fi
-          done
+          # Test health endpoint
+          echo "Testing health endpoint..."
+          curl -v http://localhost:8082/health || echo "Health endpoint failed"
           
-          # Test status endpoint with retries
-          for i in {1..5}; do
-            if curl -f http://localhost:8082/api/status; then
-              echo "✅ Status endpoint working"
-              break
-            else
-              echo "Attempt $i failed, retrying..."
-              sleep 2
-            fi
-          done
+          # Test status endpoint  
+          echo "Testing status endpoint..."
+          curl -v http://localhost:8082/api/status || echo "Status endpoint failed"
           
           # Cleanup
           docker stop $CONTAINER_ID
           docker rm $CONTAINER_ID
           
-          echo "✅ Health endpoints validated"
+          echo "✅ Health endpoint test completed (may have failed but container built successfully)"
       
       - name: Login to Docker Hub (only on push to main)
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
